--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "latest",
     "next-themes": "^0.2.1",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "react-quill": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "latest",
